--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 		</div>
 		<ul data-role="listview" data-inset="true">
       <li><h1>Rafa</h1> <h1 class='clock'></h1></li>
-			<li><h1>Rodo</h1> <h1 class='clock'></h1></li>
-			<li><h1>Julian</h1><h1 class='clock'><h1></h1></li>
-			<li><h1>Licha</h1> <h1 class='clock'><h1></h1></li>
+			<li><h1>Lisandro</h1><h1 class='clock'><h1></h1></li>
+			<li><h1>Julian</h1> <h1 class='clock'><h1></h1></li>
+			<li><h1>Rodo</h1> <h1 class='clock'><h1></h1></li>
 			<li id="reset"><h1>RESET</h1></li>
 		</ul>
 	</div>
